--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </ul>
             </li>
 
-            <li><a href="file:///C:/Users/nunuv/Desktop/SYSTHOR%20HTML%20Y%20CSS/CONOCENOS/conocenos.html">CONOCENOS</a>
+            <li><a href="file:///C:/Users/nunuv/Desktop/SYSTHOR%20HTML%20Y%20CSS/conocenos.html">CONOCENOS</a>
               <ul>
                 <li><a href="#"><i class="fas fa-users"></i>Quiénes Somos</a></li>
                 <li><a href="#"><i class="fas fa-bullseye"></i>Mision y Vision</a></li>
