--- a/CONOCENOS/conocenos.html
+++ b/CONOCENOS/conocenos.html
@@ -20,7 +20,7 @@
   </div>
     <nav>
         <ul class="menu">
-            <li><a href="file:///C:/Users/nunuv/Desktop/SYSTHOR%20HTML%20Y%20CSS/index.html">INICIO</a>
+            <li><a href="index.html">INICIO</a>
               <ul>
                 <li><a href="#"><i class="fas fa-home"></i>Bienvenido a SYSTHOR</a></li>
                 
