--- a/CONOCENOS/conocenos.html
+++ b/CONOCENOS/conocenos.html
@@ -20,7 +20,7 @@
   </div>
     <nav>
         <ul class="menu">
-            <li><a href="index.html">INICIO</a>
+            <li><a href="https://github.com/tayleroconer/systhor/blob/main/index.html">INICIO</a>
               <ul>
                 <li><a href="#"><i class="fas fa-home"></i>Bienvenido a SYSTHOR</a></li>
                 
@@ -45,7 +45,7 @@
               </ul>
             </li>
 
-            <li><a href="file:///C:/Users/nunuv/Desktop/SYSTHOR%20HTML%20Y%20CSS/CONOCENOS/conocenos.html">CONOCENOS</a>
+            <li><a href="CONOCENOS/conocenos.html">CONOCENOS</a>
               <ul>
                 <li><a href="#"><i class="fas fa-users"></i>Quiénes Somos</a></li>
                 <li><a href="#"><i class="fas fa-bullseye"></i>Mision y Vision</a></li>
