--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
     <nav>
         <ul class="menu">
-            <li><a href="index.html">INICIO</a>
+            <li><a href="https://tayleroconer.github.io/systhor/index.html">INICIO</a>
               <ul>
                 <li><a href="#"><i class="fas fa-home"></i>Bienvenido a SYSTHOR</a></li>
                 
