--- a/SOPORTE TI/soporte.html
+++ b/SOPORTE TI/soporte.html
@@ -20,7 +20,7 @@
   </div>
     <nav>
         <ul class="menu">
-            <li><a href="file:///C:/Users/nunuv/Desktop/SYSTHOR%20HTML%20Y%20CSS/index.html">INICIO</a>
+            <li><a href="https://tayleroconer.github.io/systhor/index.html">INICIO</a>
               <ul>
                 <li><a href="#"><i class="fas fa-home"></i>Bienvenido a SYSTHOR</a></li>
                 
@@ -35,7 +35,7 @@
               </ul>
             </li>
 
-            <li><a href="file:///C:/Users/nunuv/Desktop/SYSTHOR%20HTML%20Y%20CSS/SOPORTE%20TI/soporte.html">SOPORTE TI</a>
+            <li><a href="SOPORTE%20TI/soporte.html">SOPORTE TI</a>
               <ul>
                     <li><a href="#"><i class="fas fa-cogs"></i>Asesoramiento Tecnico</a></li>
                     <li><a href="#"><i class="fas fa-desktop"></i>Intalacion de Programas </a></li>
