--- a/PRODUCTOS/productos.html
+++ b/PRODUCTOS/productos.html
@@ -28,14 +28,14 @@
               </ul>
             </li>
 
-            <li><a href="PRODUCTOS/productos.html">PRODUCTOS</a>
+            <li><a href="https://tayleroconer.github.io/systhor/PRODUCTOS/productos.html">PRODUCTOS</a>
               <ul>
                 <li><a href="#"><i class="fas fa-keyboard"></i> Perifericos</a></li>
                 <li><a href="#"><i class="fas fa-laptop"></i>Laptops</a></li>
               </ul>
             </li>
 
-            <li><a href="SOPORTE%20TI/soporte.html">SOPORTE TI</a>
+            <li><a href="https://tayleroconer.github.io/systhor/SOPORTE%20TI/soporte.html">SOPORTE TI</a>
               <ul>
                     <li><a href="#"><i class="fas fa-cogs"></i>Asesoramiento Tecnico</a></li>
                     <li><a href="#"><i class="fas fa-desktop"></i>Intalacion de Programas </a></li>
@@ -45,7 +45,7 @@
               </ul>
             </li>
 
-            <li><a href="CONOCENOS/conocenos.html">CONOCENOS</a>
+            <li><a href="https://tayleroconer.github.io/systhor/CONOCENOS/conocenos.html">CONOCENOS</a>
               <ul>
                 <li><a href="#"><i class="fas fa-users"></i>Quiénes Somos</a></li>
                 <li><a href="#"><i class="fas fa-bullseye"></i>Mision y Vision</a></li>
